# pygnon

./: .env.example  .gitignore  README.md  pyproject.toml
data/database/: schema.sql
src/pygnon/: client.py  config.py  database.py  main.py  utils.py
