[project]
name = "pygnon"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Pech"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (>=1.21.0,<1.25.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "pygnon", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
